--- a/app/templates/add_category.html
+++ b/app/templates/add_category.html
@@ -8,8 +8,8 @@
             {{form.name}}<br>
         </p>
         <p>
-            Path to picture:
-            {{ form.picture }}
+            Path to picture:<br>
+            {{ form.picture }}<br>
         </p>
         <p><input type="submit" value="add"></p>
         <p><a href="{{ url_for('index') }}"><input type="button" value="Home"></a></p>
