--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -12,12 +12,12 @@
             {{ form.name }}<br>
         </p>
         <p>
-            Description:
-            {{ form.description }}
+            Description:<br>
+            {{ form.description }}<br>
         </p>
         <p>
-            Path to picture:
-            {{ form.picture }}
+            Path to picture:<br>
+            {{ form.picture }}<br>
         </p>
         <p>
             Price:<br>
