feat: add picture uploading for category and product refactor: changed structure of storing pictures

--- a/app/templates/_category.html
+++ b/app/templates/_category.html
@@ -1,6 +1,6 @@
 <a href="{{ url_for('products', category_id=cat.id) }}">
   <div class="card" style="width: 18rem;">
-    <img src="../static/images/{{ cat.picture }} " class="card-img-top" alt="...">
+    <img src="../static/images/category/{{ cat.picture }} " class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">{{ cat.name }}</p>
     </div>
