--- a/app/templates/_product.html
+++ b/app/templates/_product.html
@@ -1,6 +1,6 @@
 <a href="{{ url_for('product', product_id=prod.id) }}">
   <div class="card" style="width: 18rem;">
-    <img src="../static/images/{{ prod.picture }}" class="card-img-top" alt="...">
+    <img src="../static/images/product/{{ prod.picture }}" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">{{ prod.name }}</p>
     </div>
