--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div>
     <h1>{{ prod.name }}</h1>
-    <img src="../static/images/{{ prod.picture }}" class="card-img-top" alt="...">
+    <img src="../static/images/product/{{ prod.picture }}" class="card-img-top" alt="...">
   </div>
   <div>
     <p>{{ prod.price }}</p>
