--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     {% else %}
     <title>Default title</title>
     {% endif %}
+    <link href="../static/css/style.css" style="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -14,8 +15,10 @@
         {% include '_nav.html' %}
     {% endblock %}
     <div class="container">
-        {% block content%}
-        {% endblock %}
+    {% include '_flashes.html' %}
+    {% block content %}
+
+    {% endblock %}
     </div>
 </body>
 </html>
