--- a/app/templates/_nav.html
+++ b/app/templates/_nav.html
@@ -10,6 +10,11 @@
         <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+        {% if current_user.is_authenticated %}
+          {% if current_user.is_super() %}
+            <li><a href="{{ url_for('add_post') }}" class="nav-link px-2 link-dark">Add post</a></li>
+          {% endif %}
+        {% endif %}
       </ul>
 
       <div class="col-md-3 text-end">
