--- a/app/templates/_add_new.html
+++ b/app/templates/_add_new.html
@@ -1,8 +1,8 @@
 <a href="{{ url_for(new.fun, category_id=category_id) }}">
-  <div class="card" style="width: 18rem;">
-  <img src="../static/images/plus.png " class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">{{ new.name }}</p>
-  </div>
+  <div class="card align-items-center" style="width: 18rem;">
+    <img src="../static/images/plus.png" class="card-img-top catalog-image" alt="...">
+    <div class="card-body">
+      <p class="card-text">{{ new.name }}</p>
+    </div>
 </div>
 </a>
