--- a/app/templates/_product.html
+++ b/app/templates/_product.html
@@ -1,6 +1,6 @@
 <a href="{{ url_for('product', product_id=prod.id) }}">
-  <div class="card" style="width: 18rem;">
-    <img src="../static/images/product/{{ prod.picture }}" class="card-img-top" alt="...">
+  <div class="card align-items-center" style="width: 18rem;">
+    <img src="../static/images/product/{{ prod.picture }}" class="card-img-top catalog-image" alt="...">
     <div class="card-body">
       <p class="card-text">{{ prod.name }}</p>
     </div>
