--- a/app/templates/add_post.html
+++ b/app/templates/add_post.html
@@ -11,7 +11,7 @@
             Picture:<br>
             {{ form.picture }}<br>
         </p>
-        <p><input type="submit" value="add"></p>
+        <p><input type="submit" value="Add"></p>
     </form>
 
 
