--- a/app/templates/add_category.html
+++ b/app/templates/add_category.html
@@ -11,7 +11,6 @@
             Picture:<br>
             {{ form.picture }}
         </p>
-        <p><input type="submit" value="add"></p>
+        <p><input type="submit" value="Add"></p>
     </form>
-    <p><a href="{{ url_for('index') }}"><input type="button" value="Home"></a></p>
 {% endblock %}
