--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -27,7 +27,6 @@
             Mark:<br>
             {{ form.mark }}<br>
         </p>
-        <p><input type="submit" value="add"></p>
-        <p><a href="{{ url_for('index') }}"><input type="button" value="Home"></a></p>
+        <p><input type="submit" value="Add"></p>
     </form>
 {% endblock %}
