--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,12 @@
-.cart_image {
-    max-width: '10%',
-    max-height: '10%'
+.cart-image {
+    max-width: 200px;
+    max-height: 300px;
+}
+.image {
+    width: '70%';
+    height: '30%';
+}
+.catalog-image {
+    width: 250px;
+    height: 200px;
 }
