--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -45,7 +45,7 @@
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p><input type="submit" value="register"></p>
+        <p><input type="submit" value="Register"></p>
         <p><a href="{{ url_for('index') }}"><input type="button" value="Home"></a></p>
     </form>
 {% endblock %}
